# voicePhone

./: .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix  voicephone.db
.github/workflows/: flake-build.yml  windows-build.yml
client/: networkclient.cpp  networkclient.h
server/: main.cpp  server.cpp  server.h  userdatabase.cpp  userdatabase.h
src/: audioengine.cpp  audioengine.h  crypto.cpp  crypto.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  opuscodec.cpp  opuscodec.h
ui/: main.cpp
ui/loginWindow/: loginDlg.cpp  loginDlg.h  loginDlg.ui
ui/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
